--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -1,79 +1,79 @@
 #map {
-	height: 100%;
-	width: 100%;
+    height: 100%;
+    width: 60%;
 }
 
 html, body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 .controls {
-	margin-top: 10px;
-	border: 1px solid transparent;
-	border-radius: 2px 0 0 2px;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	height: 32px;
-	outline: none;
-	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    margin-top: 10px;
+    border: 1px solid transparent;
+    border-radius: 2px 0 0 2px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    height: 32px;
+    outline: none;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 
-#origin-input, 
+#origin-input,
 #destination-input {
-	background-color: #fff;
-	font-family: Roboto;
-	font-size: 15px;
-	font-weight: 300;
-	margin-left: 12px;
-	padding: 0 11px 0 13px;
-	text-overflow: ellipsis;
-	width: 200px;
+    background-color: #fff;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    margin-left: 12px;
+    padding: 0 11px 0 13px;
+    text-overflow: ellipsis;
+    width: 200px;
 }
 
-#origin-input: focus,
-#destination-input: focus {
-	border-color: #4d90fe;
-}
+/*#origin-input: focus,*/
+/*#destination-input: focus {*/
+    /*border-color: #4d90fe;*/
+/*}*/
 
 #mode-selector {
-	color: #fff;
-	background-color: #4d90fe;
-	margin-left: 12px;
-	padding: 5px 11px 0px 11px;
+    color: #fff;
+    background-color: #4d90fe;
+    margin-left: 12px;
+    padding: 5px 11px 0px 11px;
 }
 
 #mode-selector label {
-	font-family: Roboto;
-	font-size: 13px;
-	font-weight: 300;
+    font-family: Roboto;
+    font-size: 13px;
+    font-weight: 300;
 }
 
 #right-panel {
-	font-family: 'Roboto', 'sans-serif';
-	line-height: 30px;
-	padding-left: 10px;
+    font-family: 'Roboto', 'sans-serif';
+    line-height: 30px;
+    padding-left: 10px;
 }
 
 #right-panel select, #right-panel input {
-	font-size: 15px;
+    font-size: 15px;
 }
 
 #right-panel select {
-	width: 100%;
+    width: 100%;
 }
 
 #right-panel i {
-	font-size: 12px;
+    font-size: 12px;
 }
 
 #right-panel {
-	float: right;
-	width: 30%;
-	padding-left: 2%;
+    float: right;
+    width: 30%;
+    padding-left: 2%;
 }
 
 #output {
-	font-size: 11px;
+    font-size: 11px;
 }
